<?xml version="1.0"?>
<package format="2">
  <name>aliengo_z1_description</name>
  <version>0.0.0</version>
  <description>The aliengo_z1_description package</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
